subiendo primer commit de la rama gerardo

--- a/biblioteca/polls/templates/polls/index.html
+++ b/biblioteca/polls/templates/polls/index.html
@@ -15,5 +15,6 @@
     <p>No polls are available.</p>
 {% endif%}
 <a href="../../static/documentos/aviso_privacidad.pdf" target="_blank" rel="noopener noreferrer">Ver aviso de privacidad</a>
+<a href="../../static/documentos/aviso_privacidad.pdf" target="_blank" rel="noopener noreferrer">Ver aviso de privacidad2</a>
 </body>
 </html>
